few more amends

--- a/outdoor.html
+++ b/outdoor.html
@@ -215,7 +215,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img39m.jpg" alt="">
-                            <span>SHOP ALL COLLECTIONS ></span>
+                            <span class="underline-link">SHOP ALL COLLECTIONS ></span>
                         </div>
                     </div>
                 </div>
@@ -224,31 +224,31 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0677/img28m.jpg" alt="">
-                            <span>SECTIONALS ></span>
+                            <span class="underline-link">SECTIONALS ></span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0677/img48m.jpg" alt="">
-                            <span>SOFAS & LOVESEATS</span>
+                            <span class="underline-link">SOFAS & LOVESEATS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0677/img47m.jpg" alt="">
-                            <span>LOUNGE CHAIRS & OTTOMANS</span>
+                            <span class="underline-link">LOUNGE CHAIRS & OTTOMANS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img9m.jpg" alt="">
-                            <span>CHAISES & DAYBEDS</span>
+                            <span class="underline-link">CHAISES & DAYBEDS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202141/0255/img1m.jpg" alt="">
-                            <span>COFFEE & SIDE TABLES</span>
+                            <span class="underline-link">COFFEE & SIDE TABLES</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img52m.jpg" alt="">
-                            <span>UTILITY & STORAGE</span>
+                            <span class="underline-link">UTILITY & STORAGE</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img28m.jpg" alt="">
-                            <span>ALL OUTDOOR LOUNGE & ACCENT</span>
+                            <span class="underline-link">ALL OUTDOOR LOUNGE & ACCENT</span>
                         </div>
                     </div>
                 </div>
@@ -257,31 +257,31 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0627/img1m.jpg" alt="">
-                            <span>DINING TABLES</span>
+                            <span class="underline-link">DINING TABLES</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0628/img1m.jpg" alt="">
-                            <span>DINING CHAIRS & BENCHES</span>
+                            <span class="underline-link">DINING CHAIRS & BENCHES</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0021/img56m.jpg" alt="">
-                            <span>DINING TABLE + CHAIR PAIRINGS</span>
+                            <span class="underline-link">DINING TABLE + CHAIR PAIRINGS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img13m.jpg" alt="">
-                            <span>OUTDOOR KITCHEN</span>
+                            <span class="underline-link">OUTDOOR KITCHEN</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0629/img1m.jpg" alt="">
-                            <span>BARSTOOLS & COUNTER STOOLS</span>
+                            <span class="underline-link">BARSTOOLS & COUNTER STOOLS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img42m.jpg" alt="">
-                            <span>BARS, BUFFETS & BAR CARTS</span>
+                            <span class="underline-link">BARS, BUFFETS & BAR CARTS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img7m.jpg" alt="">
-                            <span>ALL OUTDOOR DINING FURNITURE</span>
+                            <span class="underline-link">ALL OUTDOOR DINING FURNITURE</span>
                         </div>
                     </div>
                 </div>
@@ -290,15 +290,15 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0631/img1m.jpg" alt="">
-                            <span>LOUNGE & ACCENT</span>
+                            <span class="underline-link">LOUNGE & ACCENT</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0630/img1m.jpg" alt="">
-                            <span>DINING</span>
+                            <span class="underline-link">DINING</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0605/img1m.jpg" alt="">
-                            <span>ALL SMALL SPACE & PATIO</span>
+                            <span class="underline-link">ALL SMALL SPACE & PATIO</span>
                         </div>
                     </div>
                 </div>
@@ -307,7 +307,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202208/0302/img1m.jpg" alt="">
-                            <span>UMBRELLAS & STANDS</span>
+                            <span class="underline-link">UMBRELLAS & STANDS</span>
                         </div>
                     </div>
                 </div>
@@ -316,7 +316,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img24m.jpg" alt="">
-                            <span>ALL FIRE PITS & PATIO HEATERS</span>
+                            <span class="underline-link">ALL FIRE PITS & PATIO HEATERS</span>
                         </div>
                     </div>
                 </div>
@@ -325,39 +325,39 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img76m.jpg" alt="">
-                            <span>OUTDOOR PILLOWS</span>
+                            <span class="underline-link">OUTDOOR PILLOWS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img80m.jpg" alt="">
-                            <span>HIGH PERFORMANCE INDOOR/OUTDOOR RUGS</span>
+                            <span class="underline-link">HIGH PERFORMANCE INDOOR/OUTDOOR RUGS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202141/0327/img34m.jpg" alt="">
-                            <span>OUTDOOR CURTAINS</span>
+                            <span class="underline-link">OUTDOOR CURTAINS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0021/img29m.jpg" alt="">
-                            <span>REPLACEMENT CUSHIONS</span>
+                            <span class="underline-link">REPLACEMENT CUSHIONS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202141/0259/img2m.jpg" alt="">
-                            <span>FURNITURE COVERS & CARE</span>
+                            <span class="underline-link">FURNITURE COVERS & CARE</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img17m.jpg" alt="">
-                            <span>OUTDOOR STORAGE</span>
+                            <span class="underline-link">OUTDOOR STORAGE</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img60m.jpg" alt="">
-                            <span>POOL & BEACH TOWELS</span>
+                            <span class="underline-link">POOL & BEACH TOWELS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img5m.jpg" alt="">
-                            <span>POOL & BEACH ACCESSORIES</span>
+                            <span class="underline-link">POOL & BEACH ACCESSORIES</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202139/0501/img2m.jpg" alt="">
-                            <span>OUTDOOR GAMES & RECREATION</span>
+                            <span class="underline-link">OUTDOOR GAMES & RECREATION</span>
                         </div>
                     </div>
                 </div>
@@ -366,27 +366,27 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img15m.jpg" alt="">
-                            <span>PLANTERS</span>
+                            <span class="underline-link">PLANTERS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img56m.jpg" alt="">
-                            <span>PLANT STANDS</span>
+                            <span class="underline-link">PLANT STANDS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img45m.jpg" alt="">
-                            <span>GARDENING TOOLS & WATERING</span>
+                            <span class="underline-link">GARDENING TOOLS & WATERING</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img21m.jpg" alt="">
-                            <span>GARDEN DECOR & FOUNTAINS</span>
+                            <span class="underline-link">GARDEN DECOR & FOUNTAINS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img18m.jpg" alt="">
-                            <span>PLANTS</span>
+                            <span class="underline-link">PLANTS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img8m.jpg" alt="">
-                            <span>ALL GARDEN</span>
+                            <span class="underline-link">ALL GARDEN</span>
                         </div>
                     </div>
                 </div>
@@ -395,23 +395,23 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202202/0015/img1m.jpg" alt="">
-                            <span>PENDANTS, FLUSH MOUNTS & SCONCES</span>
+                            <span class="underline-link">PENDANTS, FLUSH MOUNTS & SCONCES</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img56m.jpg" alt="">
-                            <span>CEILING FANS</span>
+                            <span class="underline-link">CEILING FANS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img35m.jpg" alt="">
-                            <span>STRING LIGHTS</span>
+                            <span class="underline-link">STRING LIGHTS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img21m.jpg" alt="">
-                            <span>LANTERNS</span>
+                            <span class="underline-link">LANTERNS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0676/img5m.jpg" alt="">
-                            <span>ALL OUTDOOR LIGHTING</span>
+                            <span class="underline-link">ALL OUTDOOR LIGHTING</span>
                         </div>
                     </div>
                 </div>
@@ -420,19 +420,19 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1205/img2m.jpg" alt="">
-                            <span>WREATHS & GARLANDS</span>
+                            <span class="underline-link">WREATHS & GARLANDS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1205/img3m.jpg" alt="">
-                            <span>DOORMATS</span>
+                            <span class="underline-link">DOORMATS</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1205/img1m.jpg" alt="">
-                            <span>OUTDOOR HARDWARE</span>
+                            <span class="underline-link">OUTDOOR HARDWARE</span>
                         </div>
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1205/img4m.jpg" alt="">
-                            <span>ALL FRONT DOOR DECORATING</span>
+                            <span class="underline-link">ALL FRONT DOOR DECORATING</span>
                         </div>
                     </div>
                 </div>
@@ -441,7 +441,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202143/0606/img1m.jpg" alt="">
-                            <span>ALL OUTDOOR DINING & ENTERTAINING</span>
+                            <span class="underline-link">ALL OUTDOOR DINING & ENTERTAINING</span>
                         </div>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202208/0163/img46m.jpg" alt="">
-                            <span>ALL IN-STOCK OUTDOOR</span>
+                            <span class="underline-link">ALL IN-STOCK OUTDOOR</span>
                         </div>
                     </div>
                 </div>
@@ -459,7 +459,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1206/img1m.jpg" alt="">
-                            <span>NEW ARRIVALS</span>
+                            <span class="underline-link">NEW ARRIVALS</span>
                         </div>
                     </div>
                 </div>
@@ -468,7 +468,7 @@
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202140/0587/img3m.jpg" alt="">
-                            <span>CONTRACT GRADE OUTDOOR</span>
+                            <span class="underline-link">CONTRACT GRADE OUTDOOR</span>
                         </div>
                     </div>
                 </div>
