changes in header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="/styles/header.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="stylesheet" href="/styles/index.css" />
+    <script src="https://kit.fontawesome.com/d3ed7b5523.js" crossorigin="anonymous"></script>
   </head>
   <body>
+
     <header id="header-main-container">
       <!-- header container  -->
     </header>
@@ -51,181 +53,287 @@
           </td>
         </tr>
       </table>
-    </div>
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1034/001/001.png"
-        alt=""
-      />
-    </div>
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/037.jpg"
-        alt=""
-      />
-    </div>
 
-    <div class="hp-image-full">
-      <div class="hp-two-img">
+      <div class="hp-image-full">
         <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/032.jpg"
-          alt=""
-        />
-
-        <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/028.jpg"
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1034/001/001.png"
           alt=""
         />
       </div>
-    </div>
-
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/036.jpg"
-        alt=""
-      />
-    </div>
-
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/003.png"
-        alt=""
-      />
-    </div>
-
-    <div>
-      <!-- image slider here -->
-    </div>
-
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/034.jpg"
-        alt=""
-      />
-    </div>
-
-    <div class="hp-image-full">
-      <div class="hp-image-three">
+      <div class="hp-image-full">
         <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/025.jpg"
-          alt=""
-        /><img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/027.jpg"
-          alt=""
-        /><img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/020.jpg"
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/037.jpg"
           alt=""
         />
       </div>
-    </div>
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/035.jpg"
-        alt=""
-      />
-    </div>
-    <div class="hp-image-full">
-      <div class="hp-two-img">
+
+      <div class="hp-image-full">
+        <div class="hp-two-img">
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/032.jpg"
+            alt=""
+          />
+
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/028.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="hp-image-full">
         <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/030.jpg"
-          alt=""
-        /><img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/029.jpg"
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/036.jpg"
           alt=""
         />
       </div>
-    </div>
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/002.png"
-        alt=""
-      />
-    </div>
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/033.jpg"
-        alt=""
-      />
-    </div>
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/001.png"
-        alt=""
-      />
-    </div>
-    <div>
-      <!-- image slider here -->
-    </div>
 
-    <div class="hp-image-full" id="hp-img-box">
-      <div>
+      <div class="hp-image-full">
         <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/013.jpg"
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/003.png"
           alt=""
         />
       </div>
 
       <div>
-        <div>
+        <!-- image slider here -->
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/034.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="hp-image-full">
+        <div class="hp-image-three">
           <img
-            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/004.jpg"
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/025.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/027.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/020.jpg"
             alt=""
           />
         </div>
-        <div>
+      </div>
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/035.jpg"
+          alt=""
+        />
+      </div>
+      <div class="hp-image-full">
+        <div class="hp-two-img">
           <img
-            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/003.jpg"
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/030.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/029.jpg"
             alt=""
           />
         </div>
       </div>
-    </div>
-
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/015.jpg"
-        alt=""
-      />
-    </div>
-    <div class="hp-image-full">
-      <div class="hp-two-img">
+      <div class="hp-image-full">
         <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1267/001/001.jpg"
-          alt=""
-        />
-        <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1267/001/002.jpg"
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/002.png"
           alt=""
         />
       </div>
-    </div>
-
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/014.jpg"
-        alt=""
-      />
-    </div>
-    <div class="hp-image-full">
-      <div class="hp-image-three">
+      <div class="hp-image-full">
         <img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202208/0979/001/001.jpg"
-          alt=""
-        /><img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/011.jpg"
-          alt=""
-        /><img
-          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/010.jpg"
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/033.jpg"
           alt=""
         />
       </div>
-    </div>
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/001.png"
+          alt=""
+        />
+      </div>
+      <div>
+        <!-- image slider here -->
+      </div>
 
-    <div class="hp-image-full">
-      <img
-        src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202205/1221/001/001.jpg"
-        alt=""
-      />
+      <div class="hp-image-full" id="hp-img-box">
+        <div>
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/013.jpg"
+            alt=""
+          />
+        </div>
+
+        <div>
+          <div>
+            <img
+              src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/004.jpg"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/003.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/015.jpg"
+          alt=""
+        />
+      </div>
+      <div class="hp-image-full">
+        <div class="hp-two-img">
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1267/001/001.jpg"
+            alt=""
+          />
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1267/001/002.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/014.jpg"
+          alt=""
+        />
+      </div>
+      <div class="hp-image-full">
+        <div class="hp-image-three">
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202208/0979/001/001.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/011.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/010.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202205/1221/001/001.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0326/001/009.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="hp-image-full" id="hp-middle-text">
+        <ul>
+          <li>SEE MORE ACROSS OUR FAMILY OF BRANDS</li>
+          <li id="hor-line"></li>
+          <li>POTTERY BARN KIDS</li>
+          <li>POTTERY BARN TEEN</li>
+          <li>WILLIAMS Sonoma</li>
+          <li>WILLIAMS SONOMA HOME</li>
+          <li>WEST ELM</li>
+          <li>REJUVENATION</li>
+          <li>MARK GRAHAM</li>
+        </ul>
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="
+      https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/012.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0995/001/005.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/6257/001/038.jpg"
+          alt=""
+        />
+      </div>
+
+      <div class="hp-image-full">
+        <p>SHOP OUR PICKS</p>
+      </div>
+
+      <div>
+        <!-- product slider here -->
+      </div>
+
+      <div class="hp-image-full">
+        <img
+          src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202143/1123/001/001.png"
+          alt=""
+        />
+      </div>
+      <div class="hp-image-full">
+        <div class="pb-hp-img-card">
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/001.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/005.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/004.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/003.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/007.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/006.jpg"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202204/0605/001/002.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="hp-image-full">
+        <div class="pb-hp-img">
+          <img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/029/356.png"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/026/680.png"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/024/598.png"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/026/047.png"
+            alt=""
+          /><img
+            src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/028/027.png"
+            alt=""
+          />
+        </div>
+      </div>
     </div>
     <footer id="ft-container">
       <!-- footer container -->
