all icons added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="/styles/header.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="stylesheet" href="/styles/index.css" />
-    <script src="https://kit.fontawesome.com/d3ed7b5523.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d3ed7b5523.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-
     <header id="header-main-container">
       <!-- header container  -->
     </header>
@@ -31,6 +33,7 @@
               alt=""
             />
           </td>
+
           <td>
             <img
               src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/0993/001/005.jpg"
