--- a/sofa.html
+++ b/sofa.html
@@ -23,6 +23,7 @@
       <!-- <div id="flex" >
             <p>$100</p>
             <p>$150</p>
+            <div></div>
         </div> -->
     </div>
   </body>
