data file imported in js file

--- a/sofa.html
+++ b/sofa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sofa Collection</title>
-    <link rel="stylesheet" href="style\sofa.css">
+    <link rel="stylesheet" href="styles\sofa.css" />
   </head>
   <body>
     <button onclick="window.location.href='cart.html'">Go to Cart</button>
@@ -20,20 +20,8 @@
       <option value="chair">Chair</option>
     </select>
     <div id="container">
-      <!-- <div id="flex" >
-            <p>$100</p>
-            <p>$150</p>
-            <div></div>
-        </div> -->
     </div>
   </body>
 </html>
-<script type="module">
-  
-import sofaDataFn from "./components/dataFile.js";
 
-sofaDataFn();
-
-
-</script>
-<script  src="scripts/sofa.js"></script>
+<script type="module" src="scripts/sofa.js"></script>
