--- a/furniture.html
+++ b/furniture.html
@@ -450,7 +450,7 @@
             <div class="carousal-conatiner2">
                 <div class="head">
                    <h1 style="font-size:27px; font-weight:lighter;">SHARE, SHOP & GET INSPIRED</h1>
-                   <p style="margin: 0px 0px 10p 50pxx; padding: 0px 0px 5px 30px; font-size:16px;">Be the first to share how you've styled this item!</p>
+                   <p style="margin: 0px 0px 10p 50px; padding: 0px 0px 5px 30px; font-size:16px;">Be the first to share how you've styled this item!</p>
                    <p style="text-align:center;margin-top: 20px;font-size:16px;">Upload your pictures here or on Instagram. Tag @potterybarn to get featured!</p>
                 </div>
             </div>
