Cart Page Create and some minor changes
Cart Page Create and some minor changes

--- a/sofa.html
+++ b/sofa.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style\sofa.css">
   </head>
   <body>
-    <button onclick="window.location.href='cart.html'">Go to Cart</button>
     <select id="priceSort" onchange="handlePriceSort()">
       <option value="">Price sort</option>
       <option value="high">High to low</option>
@@ -19,20 +18,32 @@
       <option value="sofa">Sofa</option>
       <option value="chair">Chair</option>
     </select>
+
+
+
+      <div>
+        <div id="text974536191" class="text section visual-nav-header ">
+          <h1 style="text-align: center;">DREAM SQUARE ARM<br> </h1>
+        </div>
+        <p style="text-align: center;">Handcrafted by master upholsterers to be a clean-lined, versatile and supremely
+          comfortable retreat.<br> </p>
+      </div>
+
     <div id="container">
       <!-- <div id="flex" >
             <p>$100</p>
             <p>$150</p>
         </div> -->
+
+
+
+
+        
     </div>
+    
+  
+</div>
   </body>
 </html>
-<script type="module">
-  
-import sofaDataFn from "./components/dataFile.js";
 
-sofaDataFn();
-
-
-</script>
-<script  src="scripts/sofa.js"></script>
+<script type="module" src="scripts/sofa.js"></script>
