--- a/furniture.html
+++ b/furniture.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="furniture.css">
+    <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
 </head>
 <body>
+    <header id="header-main-container">
+        <!-- header container  -->
+      </header>
     <div id="container">
         <div id="offer_tags">
             <div>FREE SHIPPING ON 1000s OF ITEMS <br>
@@ -476,5 +481,13 @@
         </div>
         <!--------------------end-------------------->
     </div>
+    <footer id="ft-container">
+        <!-- footer container -->
+      </footer>
 </body>
 </html>
+<script type="module" src="/scripts/furniture.js">
+
+   
+
+</script>
