--- a/sofa.html
+++ b/sofa.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sofa Collection</title>
     <link rel="stylesheet" href="styles\sofa.css" />
+     <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
+    <script
+      src="https://kit.fontawesome.com/d3ed7b5523.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <button onclick="window.location.href='cart.html'">Go to Cart</button>
