--- a/outdoor.html
+++ b/outdoor.html
@@ -14,6 +14,9 @@
     ></script>
   </head>
   <body>
+      <header id="header-main-container">
+      <!-- header container  -->
+    </header>
     <div id="container">
       <div id="offer_tags">
         <div>
@@ -807,5 +810,9 @@
       </div>
       <!--------------------end-------------------->
     </div>
-  </body>
+   <footer id="ft-container">
+      <!-- footer container -->
+    </footer>
+</body>
 </html>
+<script type="module" src="/scripts/furniture.js"></script>
